# coletivo_system

./: .gitignore  README.md  codex.md  docker-compose.backup.yml  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.prod.example  .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/DOCS/: AGENDA_APP_DOC.md  CREDITS_APP_DOC.md  DUTIES_APP_DOC.md  FINANCIAL_APP_DOC.md  LUNCH_APP_DOC.md  USERS_AUTH_APP_DOC.md
backend/api/: urls.py  views.py
backend/apps/agenda/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/agenda/migrations/: 0001_initial.py  0002_alter_agendaentry_notes.py
backend/apps/agenda/tests/: factories.py  test_serializers.py  test_views.py
backend/apps/authentication/: authentication.py  tests.py  urls.py  views.py
backend/apps/common/: __init__.py  exceptions.py  exports.py  pagination.py  permissions.py  roles.py  text_limits.py  validators.py
backend/apps/common/tests/: __init__.py  test_exports.py
backend/apps/credits/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/credits/migrations/: 0001_initial.py
backend/apps/credits/tests/: factories.py  test_services.py  test_views.py
backend/apps/dashboard/: urls.py  views.py
backend/apps/dashboard/tests/: __init__.py  test_views.py
backend/apps/duties/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/duties/migrations/: 0001_initial.py
backend/apps/duties/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
backend/apps/financial/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/financial/migrations/: 0001_initial.py  0002_financialentry_lunch.py  0003_alter_financialentry_category.py  0004_financialentry_package.py  0005_alter_financialentry_description.py
backend/apps/financial/tests/: factories.py  test_serializers.py  test_views.py
backend/apps/lunch/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/lunch/migrations/: 0001_initial.py  0002_lunch_remaining_quantity.py  0003_lunch_payment_mode.py  0004_remove_lunch_lunch_type_and_more.py  0005_package_unit_value_cents.py  0006_alter_lunch_payment_mode_alter_package_payment_mode.py  0007_lunch_credit_owner.py  0008_packageentry.py  0009_lunch_package_beneficiary_and_packageentry_beneficiary.py
backend/apps/lunch/tests/: factories.py  test_actions.py  test_financial_integration.py  test_roles.py  test_serializers.py  test_views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_member_diet.py  (+5 more)
backend/config/: settings.py  urls.py
(+61 files in other folders)
